tests/parser/bad/cmodule-field-id-colon-tid-eq-with.scilla
scilla_version 0

contract Nothing
()

field something : Uint128 = with
